Update of styling, fixing filter box bugs, fixing overflow, adding header subtext

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  overflow:hidden;
   font-family: 'Oswald', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -22,11 +23,21 @@ h3 {
   background-color: #31666a;
   padding: 10px 20px;
   align-items: center;
-  display: flex;
   justify-content: center;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
   box-shadow: inset -1px -1.5px #424848;
+}
+
+.header-logo {
+  margin-bottom: -6px;
+}
+
+.header-blurb {
+  font-family: "Sansita Swashed", system-ui;
+  color: #d5f0ea;
+  font-size:12px;
 }
 
 .marker {
@@ -113,11 +124,21 @@ h3 {
 }
 
 .key-box-header {
+  color:#d5f0ea;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
   margin-bottom: 10px;
+  font-size:18px;
+}
+
+.arrow-box {
+  margin-top: 5px; 
+  background-color: transparent;
+  box-shadow: none;
+  border: 0px;
+  cursor: pointer;
 }
 
 .key-box-content {
@@ -130,6 +151,7 @@ h3 {
   display: flex;
   align-items: center;
   font-size: 16px;
+  cursor: pointer;
 }
 
 input[type="checkbox"] {
@@ -140,6 +162,12 @@ input[type="checkbox"] {
   /* background-color: #82caba; */
 }
 
+.key-item-label {
+  display: flex;
+  align-items: center;
+  cursor:pointer
+}
+
 .key-item .marker {
   margin-right: 10px; /* Add space between marker and label */
-}
+}  
